--- a/test/DccExParser/CMakeLists.txt
+++ b/test/DccExParser/CMakeLists.txt
@@ -5,7 +5,9 @@ add_executable(${TEST_DCC_EX_PARSER}
     TestDccExCommandConverter.cpp
 )
 
-target_include_directories(${TEST_DCC_EX_PARSER} PRIVATE ${INCLUDE_DIRECTORIES}/DccExParser)
+target_include_directories(${TEST_DCC_EX_PARSER}
+    PRIVATE ${INCLUDE_DIRECTORIES}/DccExParser
+    PRIVATE ${INCLUDE_DIRECTORIES}/Common )
 
 target_link_libraries(${TEST_DCC_EX_PARSER} PRIVATE Catch2::Catch2WithMain)
 target_link_libraries(${TEST_DCC_EX_PARSER} PRIVATE ${LIB_DCC_EX_PARSER})
