--- a/src/DccExParser/CMakeLists.txt
+++ b/src/DccExParser/CMakeLists.txt
@@ -11,8 +11,6 @@ target_include_directories(${LIB_DCC_EX_PARSER}
 )
 
 target_compile_definitions(${LIB_DCC_EX_PARSER} 
-    PRIVATE DCC_PROTOCOL_VERSION_1=${DCC_PROTOCOL_VERSION_1}
-    PRIVATE DCC_PROTOCOL_VERSION_2=${DCC_PROTOCOL_VERSION_2}
-    PRIVATE DCC_PROTOCOL_VERSION_3=${DCC_PROTOCOL_VERSION_3}
-    PRIVATE DCC_PROTOCOL_VERSION_4=${DCC_PROTOCOL_VERSION_4}    
+    PRIVATE LIB_DCC_EX_VERSION_HI=${LIB_DCC_EX_VERSION_HI}
+    PRIVATE LIB_DCC_EX_VERSION_LO=${LIB_DCC_EX_VERSION_LO}
 )
