--- a/test/DccExParser/CMakeLists.txt
+++ b/test/DccExParser/CMakeLists.txt
@@ -17,8 +17,6 @@ target_link_libraries(${TEST_DCC_EX_PARSER} PRIVATE Catch2::Catch2WithMain)
 target_link_libraries(${TEST_DCC_EX_PARSER} PRIVATE ${LIB_DCC_EX_PARSER})
 
 target_compile_definitions(${TEST_DCC_EX_PARSER} 
-    PRIVATE DCC_PROTOCOL_VERSION_1=${DCC_PROTOCOL_VERSION_1}
-    PRIVATE DCC_PROTOCOL_VERSION_2=${DCC_PROTOCOL_VERSION_2}
-    PRIVATE DCC_PROTOCOL_VERSION_3=${DCC_PROTOCOL_VERSION_3}
-    PRIVATE DCC_PROTOCOL_VERSION_4=${DCC_PROTOCOL_VERSION_4}    
+    PRIVATE LIB_DCC_EX_VERSION_HI=${LIB_DCC_EX_VERSION_HI}
+    PRIVATE LIB_DCC_EX_VERSION_LO=${LIB_DCC_EX_VERSION_LO}
 )
