Add more configuration

--- a/test/DccProtocol/CMakeLists.txt
+++ b/test/DccProtocol/CMakeLists.txt
@@ -2,6 +2,7 @@ find_package(pugixml REQUIRED)
 find_package(Catch2 REQUIRED)
 
 add_executable(${TEST_LIB_DCC_PROTOCOL}
+    ${SRC_DIRECTORIES}/DccProtocol/DccCommandGenerator.cpp
     # Tests
     TestDccCommandGenerator.cpp
 )
@@ -9,6 +10,7 @@ add_executable(${TEST_LIB_DCC_PROTOCOL}
 target_compile_definitions(${TEST_LIB_DCC_PROTOCOL} 
     PRIVATE LIB_DCC_PROTOCOL_VERSION_HI=${LIB_DCC_PROTOCOL_VERSION_HI}
     PRIVATE LIB_DCC_PROTOCOL_VERSION_LO=${LIB_DCC_PROTOCOL_VERSION_LO}
+    PRIVATE UNIT_TEST_PRIVATE_METHODS
 )
 
 target_include_directories(${TEST_LIB_DCC_PROTOCOL} PRIVATE ${INCLUDE_DIRECTORIES}/DccProtocol)
