--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,3 +2,7 @@ add_subdirectory(Central)
 add_subdirectory(DccExParser)
 add_subdirectory(DccProtocol)
 add_subdirectory(Common)
+
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" AND ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
+    add_subdirectory(RaspberryDMA)
+endif()
