Add unite test with catch2, new version

--- a/test/Central/CMakeLists.txt
+++ b/test/Central/CMakeLists.txt
@@ -1,5 +1,4 @@
 find_package(pugixml REQUIRED)
-find_package(Catch2 REQUIRED)
 
 add_executable(${TEST_EXECUTABLE_CENTRAL_NAME}
     ${SRC_DIRECTORIES}/Central/XmlHelpers.cpp
@@ -23,3 +22,7 @@ target_include_directories(${TEST_EXECUTABLE_CENTRAL_NAME}
 
 target_link_libraries(${TEST_EXECUTABLE_CENTRAL_NAME} PRIVATE Catch2::Catch2WithMain)
 target_link_libraries(${TEST_EXECUTABLE_CENTRAL_NAME} PRIVATE pugixml::shared)
+
+include(CTest)
+include(Catch)
+catch_discover_tests(${TEST_EXECUTABLE_CENTRAL_NAME})
