--- a/test/DccExParser/CMakeLists.txt
+++ b/test/DccExParser/CMakeLists.txt
@@ -1,5 +1,3 @@
-find_package(Catch2 REQUIRED)
-
 add_executable(${TEST_DCC_EX_PARSER}
     TestDccExBasicParser.cpp
     TestDccExInfoCommands.cpp
@@ -20,3 +18,7 @@ target_compile_definitions(${TEST_DCC_EX_PARSER}
     PRIVATE LIB_DCC_EX_VERSION_HI=${LIB_DCC_EX_VERSION_HI}
     PRIVATE LIB_DCC_EX_VERSION_LO=${LIB_DCC_EX_VERSION_LO}
 )
+
+include(CTest)
+include(Catch)
+catch_discover_tests(${TEST_DCC_EX_PARSER})
