--- a/test/DccProtocol/CMakeLists.txt
+++ b/test/DccProtocol/CMakeLists.txt
@@ -1,5 +1,4 @@
 find_package(pugixml REQUIRED)
-find_package(Catch2 REQUIRED)
 
 add_executable(${TEST_LIB_DCC_PROTOCOL}
     ${SRC_DIRECTORIES}/DccProtocol/DccCommandGenerator.cpp
@@ -18,3 +17,7 @@ target_compile_definitions(${TEST_LIB_DCC_PROTOCOL}
 target_include_directories(${TEST_LIB_DCC_PROTOCOL} PRIVATE ${INCLUDE_DIRECTORIES}/DccProtocol)
 
 target_link_libraries(${TEST_LIB_DCC_PROTOCOL} PRIVATE Catch2::Catch2WithMain)
+
+include(CTest)
+include(Catch)
+catch_discover_tests(${TEST_LIB_DCC_PROTOCOL})
