Update the interface to use shared_ptr for sending answer

--- a/test/DccExParser/CMakeLists.txt
+++ b/test/DccExParser/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(${TEST_DCC_EX_PARSER}
     TestDccExSensorsCommands.cpp
     TestDccExStatusCommands.cpp
     TestDccExTrackCommands.cpp
+    TestDccExCommandConverter.cpp
 )
 
 target_include_directories(${TEST_DCC_EX_PARSER}
