--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,5 @@
-Include(FetchContent)
-
-FetchContent_Declare(
-  Catch2
-  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-  GIT_TAG        v3.8.0 # or a later release
-)
-
-FetchContent_MakeAvailable(Catch2)
-
-list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
+include(CTest)
+include(Catch)
 
 add_subdirectory(Central)
 add_subdirectory(DccExParser)
