--- a/test/DccProtocol/CMakeLists.txt
+++ b/test/DccProtocol/CMakeLists.txt
@@ -19,3 +19,10 @@ target_include_directories(${TEST_LIB_DCC_PROTOCOL} PRIVATE ${INCLUDE_DIRECTORIE
 target_link_libraries(${TEST_LIB_DCC_PROTOCOL} PRIVATE Catch2::Catch2WithMain)
 
 catch_discover_tests(${TEST_LIB_DCC_PROTOCOL})
+
+if(CODE_COVERAGE)
+    include(CodeCoverage)
+    setup_target_for_coverage_gcovr_html(
+        NAME Coverage-${TEST_LIB_DCC_PROTOCOL}
+        EXECUTABLE ${TEST_LIB_DCC_PROTOCOL})
+endif()
