--- a/src/Central/CMakeLists.txt
+++ b/src/Central/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(${EXECUTABLE_CENTRAL_NAME}
     Address.cpp
     Configuration.cpp
     Helpers.cpp
+    CentralManager.cpp
 )
 
 target_include_directories(${EXECUTABLE_CENTRAL_NAME} 
