A lot of changes for one commit, refactor code, add unit test to the rest api

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(Central)
 add_subdirectory(DccExParser)
 add_subdirectory(DccProtocol)
 add_subdirectory(Common)
+add_subdirectory(RestApi)
 
 if((${CMAKE_SYSTEM_NAME} STREQUAL "Linux") AND (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64"))
     add_subdirectory(RaspberryDMA)
