--- a/test/DccExParser/CMakeLists.txt
+++ b/test/DccExParser/CMakeLists.txt
@@ -12,8 +12,10 @@ target_include_directories(${TEST_DCC_EX_PARSER}
     PRIVATE ${INCLUDE_DIRECTORIES}/DccExParser
     PRIVATE ${INCLUDE_DIRECTORIES}/Common )
 
-target_link_libraries(${TEST_DCC_EX_PARSER} PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(${TEST_DCC_EX_PARSER} PRIVATE ${LIB_DCC_EX_PARSER})
+target_link_libraries(${TEST_DCC_EX_PARSER} 
+    PRIVATE Catch2::Catch2WithMain
+    PRIVATE ${LIB_DCC_EX_PARSER}
+)
 
 target_compile_definitions(${TEST_DCC_EX_PARSER} 
     PRIVATE LIB_DCC_EX_VERSION_HI=${LIB_DCC_EX_VERSION_HI}
