--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ message("Os Name: ${CMAKE_SYSTEM_NAME}")
 message("System Version: ${CMAKE_SYSTEM_VERSION}")
 
 add_subdirectory(externals/pugixml)
+add_subdirectory(externals/glog)
 
 if(BUILD_TESTING)
     enable_testing()
