--- a/test/Central/CMakeLists.txt
+++ b/test/Central/CMakeLists.txt
@@ -1,5 +1,3 @@
-find_package(pugixml REQUIRED)
-
 add_executable(${TEST_EXECUTABLE_CENTRAL_NAME}
     ${SRC_DIRECTORIES}/Central/Configuration/XmlHelpers.cpp
     ${SRC_DIRECTORIES}/Central/Configuration/Configuration.cpp
@@ -22,7 +20,7 @@ target_include_directories(${TEST_EXECUTABLE_CENTRAL_NAME}
 
 target_link_libraries(${TEST_EXECUTABLE_CENTRAL_NAME} 
     PRIVATE Catch2::Catch2WithMain
-    PRIVATE pugixml::shared
+    PRIVATE pugixml::pugixml
 )
 
 catch_discover_tests(${TEST_EXECUTABLE_CENTRAL_NAME})
