--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           boost_version: 1.88.0
       - name: configure
-        run: cmake -Bbuild -S . -DCMAKE_BUILD_TYPE=Release -BUILD_TESTING=ON
+        run: cmake -B build -S . -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
         env:
           BOOST_ROOT: ${{steps.install-boost.outputs.BOOST_ROOT}}
       - name: build
