--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -13,9 +13,11 @@ jobs:
         with:
           boost_version: 1.88.0
       - name: configure
-        run: cmake -B build -S . -DBoost_LIBRARY_DIRS="${{steps.install-boost.outputs.BOOST_ROOT}}/lib" -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
+        run: cmake -B build -S . -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
         env:
           BOOST_ROOT: ${{steps.install-boost.outputs.BOOST_ROOT}}
+          CPLUS_INCLUDE_PATH: ${{steps.install-boost.outputs.BOOST_ROOT}}/include
+          LIBRARY_PATH: ${{steps.install-boost.outputs.BOOST_ROOT}}/lib
       - name: build
         run: cmake --build build --parallel 2
       - name: test
