--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -13,11 +13,9 @@ jobs:
         with:
           boost_version: 1.88.0
       - name: configure
-        run: cmake -B build -S . -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
+        run: cmake -B build -S . -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON -DBoost_INCLUDE_DIR="${{steps.install-boost.outputs.BOOST_ROOT}}/include" -DBoost_LIBRARY_DIRS="${{steps.install-boost.outputs.BOOST_ROOT}}/lib"
         env:
           BOOST_ROOT: ${{steps.install-boost.outputs.BOOST_ROOT}}
-          CPLUS_INCLUDE_PATH: ${{steps.install-boost.outputs.BOOST_ROOT}}/include
-          LIBRARY_PATH: ${{steps.install-boost.outputs.BOOST_ROOT}}/lib
       - name: build
         run: cmake --build build --parallel 2
       - name: test
