--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -9,6 +9,8 @@ jobs:
           submodules: recursive
       - name: Install Boost
         run: sudo apt-get update && sudo apt-get install -y libboost-all-dev
+      - name: configure
+        run: cmake -B build -S . -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
       - name: build
         run: cmake --build build --parallel 2
       - name: test
