--- a/src/Central/CMakeLists.txt
+++ b/src/Central/CMakeLists.txt
@@ -1,4 +1,6 @@
+find_package(pugixml REQUIRED)
 find_package(Boost COMPONENTS program_options filesystem system REQUIRED)
+find_package(glog REQUIRED)
 
 add_executable(${EXECUTABLE_CENTRAL_NAME} 
     main.cpp
@@ -30,7 +32,7 @@ target_compile_definitions(${EXECUTABLE_CENTRAL_NAME}
 # Link against library
 target_link_libraries(${EXECUTABLE_CENTRAL_NAME}
     PRIVATE Boost::program_options Boost::filesystem Boost::system
-    PRIVATE pugixml::pugixml
+    PRIVATE pugixml::shared
     PRIVATE glog::glog
     PRIVATE ${LIB_REST_API}
     PRIVATE ${LIB_DCC_PROTOCOL}
